--- a/glide.yaml
+++ b/glide.yaml
@@ -29,6 +29,7 @@ import:
   version: ~1.0.6
 - package: github.com/x-cray/logrus-prefixed-formatter
   version: ~0.5.2
+- package: github.com/evalphobia/logrus_fluent
 testImport:
 - package: github.com/onsi/ginkgo
   version: ~1.6.0
